<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg_color">
    
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:text="@string/tasklist"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.853"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>    

    <ImageView
        android:id="@+id/FirstTask"
        android:onClick="EditFirst"
        android:layout_width="372dp"
        android:layout_height="78dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/rectangleyellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <TextView
        android:id="@+id/Task0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/task0"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/FirstTask"
        app:layout_constraintTop_toTopOf="@+id/FirstTask"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/TaskDescription0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:text="@string/taskdescription0"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/FirstTask"
        app:layout_constraintTop_toBottomOf="@+id/Task0"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/Date0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="17dp"
        android:text="@string/date0"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/FirstTask"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/Task0"
        app:layout_constraintTop_toTopOf="@+id/FirstTask"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/Time0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/time0"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/FirstTask"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toEndOf="@+id/Task0"
        app:layout_constraintTop_toBottomOf="@+id/Date0"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/SecondTask"
        android:onClick="EditSecond"
        android:layout_width="372dp"
        android:layout_height="78dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/rectangleyellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstTask"/>

    <TextView
        android:id="@+id/Task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/task1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/SecondTask"
        app:layout_constraintTop_toTopOf="@+id/SecondTask"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/TaskDescription1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:text="@string/taskdescription1"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/SecondTask"
        app:layout_constraintTop_toBottomOf="@+id/Task1"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/Date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="17dp"
        android:text="@string/date1"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/SecondTask"
        app:layout_constraintStart_toEndOf="@+id/Task1"
        app:layout_constraintTop_toTopOf="@+id/SecondTask"/>

    <TextView
        android:id="@+id/Time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="1dp"
        android:text="@string/time1"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/SecondTask"
        app:layout_constraintStart_toEndOf="@+id/Task1"
        app:layout_constraintTop_toBottomOf="@+id/Date1"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/ThirdTask"
        android:onClick="EditThird"
        android:layout_width="372dp"
        android:layout_height="78dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/rectangleyellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecondTask"/>

    <TextView
        android:id="@+id/Task2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/task2"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/ThirdTask"
        app:layout_constraintTop_toTopOf="@+id/ThirdTask"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/TaskDescription2"
        android:layout_width="200dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:text="@string/taskdescription2"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/ThirdTask"
        app:layout_constraintTop_toBottomOf="@+id/Task2"/>

    <TextView
        android:id="@+id/Date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="17dp"
        android:text="@string/date2"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/ThirdTask"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/Task2"
        app:layout_constraintTop_toTopOf="@+id/ThirdTask"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/Time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/time2"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/ThirdTask"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toEndOf="@+id/Task2"
        app:layout_constraintTop_toBottomOf="@+id/Date2"
        tools:ignore="MissingConstraints"/>

    <ImageButton
        android:id="@+id/appCompatButton0"
        android:layout_width="286dp"
        android:layout_height="71dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton4"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:width="48dp"
        android:height="48dp"
        android:background="@drawable/listbuttongreen"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatButton0"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton0"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton0"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:onClick="ocClickAlarm"
        android:width="48dp"
        android:height="48dp"
        android:background="@drawable/alarmbutton"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatButton0"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton1"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton0"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:width="48dp"
        android:height="48dp"
        android:onClick="onClickCalendar"
        android:background="@drawable/calendarbuttonred"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatButton0"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton2"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton0"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton4"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:text="@string/list"
        android:textAllCaps="false"
        android:onClick="onClickAdd"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/rectanglegreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ThirdTask"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:width="48dp"
        android:height="48dp"
        android:background="@drawable/settingbutton"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatButton0"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton3"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton0"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>