<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTextActivity"
    android:background="@color/bg_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:text="@string/addtask"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/backbutton"
            android:onClick="onClickCalendar"
            android:layout_marginStart="335dp"
            android:layout_marginTop="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="300dp"
        android:layout_marginTop="120dp">

        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@drawable/rectanglewhite"
            android:hint="Изменить заголовок"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="148dp"
            android:layout_height="32dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectanglesmall">

            <TextView
                android:layout_width="45dp"
                android:layout_height="21dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="3dp"
                android:text="9:30\n\n10:30\n\n11:30\n\n12:30\n\n13:30\n\n14:30\n\n15:30\n\n16:30\n\n17:30\n\n"
                android:textSize="18sp" />

        </ScrollView>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="57dp"
            android:layout_marginStart="60dp"
            android:src="@drawable/smallalarm"/>

        <ScrollView
            android:layout_width="148dp"
            android:layout_height="32dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectanglesmall">
            <TextView
                android:layout_width="90dp"
                android:layout_height="21dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="3dp"
                android:text="14.01.2021\n\n15.01.2021\n\n16.01.2021\n\n17.01.2021\n\n18.01.2021\n\n19.01.2021\n\n20.01.2021\n\n21.01.2021\n\n22.01.2021\n\n23.01.2021\n\n"
                android:textSize="18sp"/>
        </ScrollView>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="57dp"
            android:layout_marginStart="220dp"
            android:src="@drawable/calendarwhite"/>

        <EditText
            android:id="@+id/main"
            android:hint="@string/taskdescription"
            android:layout_width="312dp"
            android:layout_height="96dp"
            android:layout_marginTop="90dp"
            android:paddingStart="10dp"
            android:paddingBottom="65dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/edittextbig"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/rectanglered"
        android:text="@string/removetask"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="SaveChanges"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/rectanglegreen"
        android:text="Записать задачу"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</RelativeLayout>